# arhida

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  compose.yaml  docker-compose.yaml  requirements.txt  sluckman42.py
.github/workflows/: build.yml
db/: mongodb-p.txt
docs/: cpp_transition.md  vector_db_migration_plan.md
embeddings_service/: CMakeLists.txt
embeddings_service/include/config/: EmbeddingServiceConfig.h
embeddings_service/include/embedding/: BackendFactory.h  EmbeddingBackend.h  MlxBackend.h  OnnxCpuBackend.h  OnnxCudaBackend.h
embeddings_service/include/server/: HttpServer.h
embeddings_service/src/: main.cpp
embeddings_service/src/config/: EmbeddingServiceConfig.cpp
embeddings_service/src/embedding/: BackendFactory.cpp  MlxBackend.cpp  OnnxCpuBackend.cpp  OnnxCudaBackend.cpp
embeddings_service/src/server/: HttpServer.cpp
include/config/: Config.h
include/db/: Database.h  QdrantStorage.h  QueryBuilder.h  StorageEngine.h
include/embedding/: EmbeddingClient.h  EmbeddingTextBuilder.h
include/harvester/: Harvester.h  RateLimiter.h
include/migration/: PostgresToQdrantMigrator.h
include/oai/: OaiClient.h  Record.h
include/utils/: JsonHelper.h  Logger.h
legacy_python/: .env.example  Dockerfile  README.md  arhida.py  requirements.txt
scripts/: accelerator_unavailable_smoke.sh  app_dependency_readiness_smoke.sh  app_modes_smoke.sh  backfill_mode_e2e_smoke.sh  batch_ingestion_smoke.sh  embedding_retry_transient_smoke.sh  embeddings_benchmark.sh  embeddings_cpu_throughput_benchmark.sh  embeddings_cuda_throughput_benchmark.sh  embeddings_mlx_throughput_benchmark.sh  embeddings_smoke.sh  embeddings_startup_health_smoke.sh  embeddings_unavailable_smoke.sh  ingestion_throughput_benchmark.sh  model_artifacts_missing_smoke.sh  one_record_ingest_smoke.sh  postgres_to_qdrant_migration.sh  qdrant_dimension_payload_smoke.sh  qdrant_idempotent_upsert_smoke.sh  qdrant_persistence_smoke.sh  qdrant_set_date_filter_smoke.sh  qdrant_smoke.sh  qdrant_unavailable_smoke.sh  recent_mode_e2e_smoke.sh
src/: main.cpp  migrate_main.cpp
src/config/: Config.cpp
src/db/: Database.cpp  QdrantStorage.cpp  QueryBuilder.cpp
src/embedding/: EmbeddingClient.cpp  EmbeddingTextBuilder.cpp
src/harvester/: Harvester.cpp  RateLimiter.cpp
src/migration/: PostgresToQdrantMigrator.cpp
src/oai/: OaiClient.cpp
src/utils/: JsonHelper.cpp  Logger.cpp
tests/: EmbeddingClientTest.cpp  EmbeddingTextBuilderTest.cpp
